@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.dna.application.backend {
    namespace controller {
      class com.dna.application.backend.controller.AlignerController {
          + getBowtie()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace controller {
      class com.dna.application.backend.controller.JwtAuthenticationController {
          - authenticationManager : AuthenticationManager
          + createAuthenticationToken()
          - authenticate()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace controller {
      class com.dna.application.backend.controller.TestController {
          + setTestData()
      }
    }
  }
  

  namespace com.dna.application.backend {
    namespace controller {
      class com.dna.application.backend.controller.UserController {
          + deleteUser()
          + getUsers()
          + updateData()
          + updateOwnData()
      }
    }
  }
  

  com.dna.application.backend.controller.AlignerController o-- com.dna.application.backend.service.BowtieService : bowtieService
  com.dna.application.backend.controller.JwtAuthenticationController o-- com.dna.application.backend.util.JwtTokenUtil : jwtTokenUtil
  com.dna.application.backend.controller.JwtAuthenticationController o-- com.dna.application.backend.service.UserDetailsServiceImpl : userDetailsService
  com.dna.application.backend.controller.TestController o-- com.dna.application.backend.service.TestService : testService
  com.dna.application.backend.controller.UserController o-- com.dna.application.backend.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
